# security-harness

./: .env.example  .gitignore  README.md  pyproject.toml
src/security_harness/: agent.py  harness.py  live_state.py  main.py  state.py  web.py
src/security_harness/templates/: base.html  dashboard.html  repro_detail.html
src/security_harness/templates/partials/: active.html  bugs.html  files.html  reproduced.html  workers.html
src/security_harness/tools/: files.py  local.py  vm.py
tests/: test_parsing.py  test_state.py  test_tools.py
