[project]
name = "security-harness"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "jinja2>=3.1.6",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.1",
    "langchain-core>=1.3.0",
    "langchain-openai>=1.1.14",
    "uvicorn[standard]>=0.44.0",
]

[project.scripts]
security-harness = "security_harness.main:main"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.uv]
package = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
